fix(GUI): modal dialogs stretched responsive height, annotations list background color (PR #3052 Fixes #3017 Fixes #3006)

--- a/src/renderer/assets/styles/components/bookmarks.scss
+++ b/src/renderer/assets/styles/components/bookmarks.scss
@@ -19,10 +19,10 @@
 .bookmark_form {
     background-color: var(--color-extralight-grey);
     border-radius: 6px;
-    border: 1px solid var(--color-light-grey);
+    // border: 1px solid var(--color-light-grey);
     display: flex;
     flex-direction: column;
-    padding: 5px 10px;
+    // padding: 5px 10px;
     color: var(--color-primary);
 
     // gap: 10px;
