--- a/src/renderer/assets/styles/components/print.scss
+++ b/src/renderer/assets/styles/components/print.scss
@@ -4,7 +4,7 @@
   display: none;
 }
 
-.modal_dialog_reader {
+.modal_dialog_print {
     min-height: 500px
 }
 
